crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_appendable_struct.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Telemetry {
    pub timestamp: u32,
    pub value: f64,
}

impl zerodds_dcps::DdsType for Telemetry {
    const TYPE_NAME: &'static str = "Telemetry";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x5f, 0xb2, 0x17, 0xc0, 0x5d, 0xa5, 0x72, 0x0b, 0x81, 0x1b, 0x6c, 0xc5, 0x1c, 0xb4]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.timestamp, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.value, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.timestamp, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.value, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let timestamp = <u32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let value = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                timestamp,
                value,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let timestamp = <u32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let value = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                timestamp,
                value,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "timestamp" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.timestamp as i64)),
            "value" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.value)),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Telemetry {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.timestamp, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.value, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.timestamp, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.value, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for Telemetry {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let timestamp = <u32 as zerodds_cdr::CdrDecode>::decode(r)?;
                let value = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                ::core::result::Result::Ok(Self {
                    timestamp,
                    value,
                })
            })
        } else {
            let timestamp = <u32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            let value = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
            ::core::result::Result::Ok(Self {
                timestamp,
                value,
            })
        }
    }
}
