crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_bitmask_with_const_values.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL bitmask.
#[derive(Debug, Clone, Copy, PartialEq, Eq, Default)]
pub struct Permissions(u32);

#[allow(clippy::too_many_lines, non_snake_case)]
impl Permissions {
    /// Bit value `READ` (position 0).
    pub const READ: Self = Self((1 as u32) << 0);
    /// Bit value `WRITE` (position 1).
    pub const WRITE: Self = Self((1 as u32) << 1);
    /// Bit value `EXECUTE` (position 2).
    pub const EXECUTE: Self = Self((1 as u32) << 2);

    /// Constructs an empty bitmask (all bits = 0).
    #[must_use]
    pub const fn empty() -> Self {
        Self(0 as u32)
    }

    /// Raw storage as `u32`.
    #[must_use]
    pub const fn bits(self) -> u32 {
        self.0
    }

    /// Returns true if all bits in `other` are set.
    #[must_use]
    pub const fn contains(self, other: Self) -> bool {
        (self.0 & other.0) == other.0
    }
}

impl ::core::ops::BitOr for Permissions {
    type Output = Self;
    fn bitor(self, rhs: Self) -> Self {
        Self(self.0 | rhs.0)
    }
}

impl ::core::ops::BitAnd for Permissions {
    type Output = Self;
    fn bitand(self, rhs: Self) -> Self {
        Self(self.0 & rhs.0)
    }
}

impl ::core::ops::BitXor for Permissions {
    type Output = Self;
    fn bitxor(self, rhs: Self) -> Self {
        Self(self.0 ^ rhs.0)
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for Permissions {
    fn encode(&self, w: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <u32 as zerodds_cdr::CdrEncode>::encode(&self.0, w)
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for Permissions {
    fn decode(r: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let v = <u32 as zerodds_cdr::CdrDecode>::decode(r)?;
        ::core::result::Result::Ok(Self(v))
    }
}
