crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_bitset_with_named_bitfields.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL bitset.
#[derive(Debug, Clone, Copy, PartialEq, Eq, Default)]
pub struct Status {
    storage: u8,
}

impl Status {
    /// Constructs a `Status` with all bits set to 0.
    #[must_use]
    pub const fn new() -> Self {
        Self { storage: 0 as u8 }
    }

    /// Raw storage as `u8`.
    #[must_use]
    pub const fn as_raw(self) -> u8 {
        self.storage
    }

    /// Constructs from raw `u8`.
    #[must_use]
    pub const fn from_raw(storage: u8) -> Self {
        Self { storage }
    }

    /// Getter for `ready` (1 bit @ offset 0).
    #[must_use]
    pub const fn ready(self) -> bool {
        ((self.storage >> 0) & 1) != 0
    }

    /// Setter for `ready` (1 bit @ offset 0).
    pub fn set_ready(&mut self, value: bool) {
        let mask: u8 = (1 as u8) << 0;
        if value {
            self.storage |= mask;
        } else {
            self.storage &= !mask;
        }
    }

    /// Getter for `error` (1 bit @ offset 1).
    #[must_use]
    pub const fn error(self) -> bool {
        ((self.storage >> 1) & 1) != 0
    }

    /// Setter for `error` (1 bit @ offset 1).
    pub fn set_error(&mut self, value: bool) {
        let mask: u8 = (1 as u8) << 1;
        if value {
            self.storage |= mask;
        } else {
            self.storage &= !mask;
        }
    }

    /// Getter for `level` (2 bits @ offset 2).
    #[must_use]
    pub const fn level(self) -> u8 {
        (self.storage >> 2) & (3 as u8)
    }

    /// Setter for `level` (2 bits @ offset 2).
    pub fn set_level(&mut self, value: u8) {
        let mask: u8 = (3 as u8) << 2;
        self.storage = (self.storage & !mask) | ((value & (3 as u8)) << 2);
    }
}

impl zerodds_cdr::CdrEncode for Status {
    fn encode(&self, w: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <u8 as zerodds_cdr::CdrEncode>::encode(&self.storage, w)
    }
}

impl zerodds_cdr::CdrDecode for Status {
    fn decode(r: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let storage = <u8 as zerodds_cdr::CdrDecode>::decode(r)?;
        ::core::result::Result::Ok(Self { storage })
    }
}
