crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_enum.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 70
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL enum.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[repr(i32)]
pub enum Color {
    RED = 0,
    GREEN = 1,
    BLUE = 2,
}

impl Default for Color {
    fn default() -> Self {
        Self::RED
    }
}

impl Color {
    /// Tries to map an `i32` wire value to an enumerator.
    #[must_use]
    pub fn from_wire(value: i32) -> Option<Self> {
        match value {
            0 => Some(Self::RED),
            1 => Some(Self::GREEN),
            2 => Some(Self::BLUE),
            _ => None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Color {
    fn encode(&self, w: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <i32 as zerodds_cdr::CdrEncode>::encode(&(*self as i32), w)
    }
}

impl zerodds_cdr::CdrDecode for Color {
    fn decode(r: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let v = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
        Self::from_wire(v).ok_or(zerodds_cdr::DecodeError::InvalidEnum { kind: "Color", value: v as u32 })
    }
}
