crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_enum_explicit_value.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 84
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL enum.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[repr(i32)]
pub enum Sparse {
    ONE = 1,
    TWO = 2,
    EIGHT = 8,
}

impl Default for Sparse {
    fn default() -> Self {
        Self::ONE
    }
}

impl Sparse {
    /// Tries to map an `i32` wire value to an enumerator.
    #[must_use]
    pub fn from_wire(value: i32) -> Option<Self> {
        match value {
            1 => Some(Self::ONE),
            2 => Some(Self::TWO),
            8 => Some(Self::EIGHT),
            _ => None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Sparse {
    fn encode(&self, w: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <i32 as zerodds_cdr::CdrEncode>::encode(&(*self as i32), w)
    }
}

impl zerodds_cdr::CdrDecode for Sparse {
    fn decode(r: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let v = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
        Self::from_wire(v).ok_or(zerodds_cdr::DecodeError::InvalidEnum { kind: "Sparse", value: v as u32 })
    }
}
