crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_module_nested.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

pub mod geom {
    use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

    /// Generated by `zerodds-idl-rust` from IDL.
    #[derive(Debug, Clone, PartialEq, Default)]
    pub struct Pose {
        pub x: f64,
        pub y: f64,
        pub z: f64,
    }

    impl zerodds_dcps::DdsType for Pose {
        const TYPE_NAME: &'static str = "geom::Pose";
        const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
        const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xd5, 0x4f, 0x03, 0x96, 0x06, 0xb3, 0x67, 0xd3, 0xaa, 0xb7, 0x91, 0x2a, 0xf4, 0x67]));

        fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
            let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
            zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.y, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.z, w)?;
                Ok(())
            })?;
            out.extend_from_slice(&writer.into_bytes());
            Ok(())
        }

        fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
            let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
            zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.y, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.z, w)?;
                Ok(())
            })?;
            out.extend_from_slice(&writer.into_bytes());
            Ok(())
        }

        fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
            let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
            zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
                let x = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                let y = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                let z = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                Ok(Self {
                    x,
                    y,
                    z,
                })
            }).map_err(::core::convert::Into::into)
        }

        fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
            let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
            zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
                let x = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                let y = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                let z = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                Ok(Self {
                    x,
                    y,
                    z,
                })
            }).map_err(::core::convert::Into::into)
        }

        fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
            let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
            <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
            out.extend_from_slice(&writer.into_bytes());
            Ok(())
        }

        fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
            let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
            <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
        }

        fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
            match path {
                "x" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.x)),
                "y" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.y)),
                "z" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.z)),
                _ => ::core::option::Option::None,
            }
        }
    }

    impl zerodds_cdr::CdrEncode for Pose {
        fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
            if writer.max_alignment() == 4 {
                zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                    <_ as zerodds_cdr::CdrEncode>::encode(&self.x, w)?;
                    <_ as zerodds_cdr::CdrEncode>::encode(&self.y, w)?;
                    <_ as zerodds_cdr::CdrEncode>::encode(&self.z, w)?;
                    Ok(())
                })?;
            } else {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, writer)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.y, writer)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.z, writer)?;
            }
            ::core::result::Result::Ok(())
        }
    }

    impl zerodds_cdr::CdrDecode for Pose {
        fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
            if reader.max_alignment() == 4 {
                zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                    let x = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                    let y = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                    let z = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                    ::core::result::Result::Ok(Self {
                        x,
                        y,
                        z,
                    })
                })
            } else {
                let x = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
                let y = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
                let z = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
                ::core::result::Result::Ok(Self {
                    x,
                    y,
                    z,
                })
            }
        }
    }

}
