crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_mutable_struct_with_ids.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct UserPrefs {
    pub name: String,
    pub age: i32,
}

impl zerodds_dcps::DdsType for UserPrefs {
    const TYPE_NAME: &'static str = "UserPrefs";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Mutable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x94, 0x49, 0xe9, 0xab, 0x88, 0x3e, 0x37, 0x0d, 0x7c, 0x98, 0x2e, 0x86, 0x53, 0x79]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![10, 20]);
            enc.encode_member(10, false, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.name, w)?; Ok(()) })?;
            enc.encode_member(20, false, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.age, w)?; Ok(()) })?;
            enc.finish()?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            // member-id 10
            let mut name: ::core::option::Option<String> = ::core::option::Option::None;
            // member-id 20
            let mut age: ::core::option::Option<i32> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::Endianness::Little).xcdr2();
                        match member.member_id {
                            10 => {
                                name = ::core::option::Option::Some(<String as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            20 => {
                                age = ::core::option::Option::Some(<i32 as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                name: name.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 10 })?,
                age: age.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 20 })?,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "name" => ::core::option::Option::Some(zerodds_sql_filter::Value::String(self.name.clone())),
            "age" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.age as i64)),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for UserPrefs {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.name, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.age, writer)?;
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for UserPrefs {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let name = <String as zerodds_cdr::CdrDecode>::decode(reader)?;
        let age = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            name,
            age,
        })
    }
}
