crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_optional_member_field_wraps_in_option.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]
#![allow(non_snake_case)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Profile {
    pub name: String,
    pub age: ::core::option::Option<i32>,
    pub email: ::core::option::Option<String>,
}

impl zerodds_dcps::DdsType for Profile {
    const TYPE_NAME: &'static str = "Profile";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x2e, 0xef, 0x43, 0xaf, 0xc9, 0x6d, 0xa7, 0x9b, 0x3e, 0xf8, 0xcd, 0x93, 0x79, 0x5b]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.name, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.age, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.email, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.name, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.age, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.email, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let name = <String as zerodds_cdr::CdrDecode>::decode(r)?;
            let age = <::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(r)?;
            let email = <::core::option::Option<String> as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                name,
                age,
                email,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let name = <String as zerodds_cdr::CdrDecode>::decode(r)?;
            let age = <::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(r)?;
            let email = <::core::option::Option<String> as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                name,
                age,
                email,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "name" => ::core::option::Option::Some(zerodds_dcps::FilterValue::String(self.name.clone())),
            "age" => self.age.as_ref().map(|v| zerodds_dcps::FilterValue::Int(*v as i64)),
            "email" => self.email.as_ref().map(|v| zerodds_dcps::FilterValue::String(v.clone())),
            _ => ::core::option::Option::None,
        }
    }
}

impl zerodds_cdr::CdrEncode for Profile {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.name, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.age, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.email, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.name, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.age, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.email, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

impl zerodds_cdr::CdrDecode for Profile {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let name = <String as zerodds_cdr::CdrDecode>::decode(r)?;
                let age = <::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(r)?;
                let email = <::core::option::Option<String> as zerodds_cdr::CdrDecode>::decode(r)?;
                ::core::result::Result::Ok(Self {
                    name,
                    age,
                    email,
                })
            })
        } else {
            let name = <String as zerodds_cdr::CdrDecode>::decode(reader)?;
            let age = <::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(reader)?;
            let email = <::core::option::Option<String> as zerodds_cdr::CdrDecode>::decode(reader)?;
            ::core::result::Result::Ok(Self {
                name,
                age,
                email,
            })
        }
    }
}
