crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_simple_struct_primitives_only.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 23
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Point {
    pub x: i32,
    pub y: i32,
}

impl zerodds_dcps::DdsType for Point {
    const TYPE_NAME: &'static str = "Point";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x15, 0x88, 0xa9, 0x4d, 0x86, 0xb2, 0x0c, 0x3b, 0x0d, 0x45, 0x35, 0x5d, 0xe1, 0x34]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <_ as zerodds_cdr::CdrEncode>::encode(&self.x, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.y, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        let x = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let y = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            x,
            y,
        })
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "x" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.x as i64)),
            "y" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.y as i64)),
            _ => ::core::option::Option::None,
        }
    }
}
